--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,24 @@
 # Basic
-title: 潘柏信
-subtitle: 个人站
-description: 欢迎来到我的个人站~
+title: 愿风裁尘
+subtitle: 个人休息小站
+description: 欢迎光临，里边请~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: 愿风裁尘
 # 头像里面的描述
 avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+url: "https://justbreak.github.io/#blog"
 
 # Comment
 comment:
     # disqus: leopard
-    duoshuo: leopard
+    duoshuo: 愿风裁尘
 
 # Social
 social:
-    weibo: 5366874726
-    github: leopardpan
+    # weibo: 5366874726
+    # github:
     # twitter:
-    mail: leopardpan@icloud.com
+    # mail:
 
 # 百度统计
 # 使用博客模板请去掉或者更换 id
