--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: 欢迎光临，里边请~
 # 头像里面的标题
 avatarTitle: 愿风裁尘
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
+avatarDesc:  机器学习/语音
 url: "https://justbreak.github.io/#blog"
 
 # Comment
