--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ social:
     # weibo: 5366874726
     # github:
     # twitter:
-    # mail:
+    mail:fengluo_wuhen@163.com
 
 # 百度统计
 # 使用博客模板请去掉或者更换 id
