--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "hux-blog",
-    "title": "Hux Blog",
+    "name": "藏锋-blog",
+    "title": "藏锋 Blog",
     "author": "Hux <huxpro@gmail.com>",
     "version": "1.8.2",
     "homepage": "http://huxpro.github.io",
