--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: 藏锋 bbbBlog
+title: 藏锋
 SEOTitle: 藏锋的博客 | 藏锋 Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
+email: 
 description: ""
 keyword: ""
 url: ""              # your host, for absolute URL
