--- a/pwa/manifest.json
+++ b/pwa/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "藏锋 Blog",
-  "short_name": "藏锋vhvh",
+  "short_name": "藏锋",
   "description": "About an engineer.",
   "icons": [{
     "src": "icons/128.png",
